crates/nrzrepo-lib/src/cli/snapshots/nrzrepo_lib__cli__test__nrz---no-daemon-boundaries.snap
---
source: crates/nrzrepo-lib/src/cli/mod.rs
expression: err
---
error: Cannot use run arguments before `boundaries` subcommand

Usage: nrz [OPTIONS] [COMMAND]

For more information, try '--help'.
