crates/nrzrepo-lib/src/cli/snapshots/nrzrepo_lib__cli__test__nrz---no-daemon-run-build.snap
---
source: crates/nrzrepo-lib/src/cli/mod.rs
expression: err
---
error: Cannot use run arguments before `run` subcommand

Usage: nrz [OPTIONS] [COMMAND]

For more information, try '--help'.
