crates/nrzrepo-lib/src/cli/snapshots/nrzrepo_lib__cli__test__nrz---no-daemon-watch-build.snap
---
source: crates/nrzrepo-lib/src/cli/mod.rs
expression: err
---
error: Cannot use run arguments outside of run command

Usage: nrz [OPTIONS] [COMMAND]

For more information, try '--help'.
